# T-Clock

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/Calendar/: CMakeLists.txt  DeskCalendar.c  pre_c.h  pre_cpp.h
src/Clock/: CMakeLists.txt  alarm.c  main.c  pageabout.c
src/DLL/: CMakeLists.txt  Tclock.c  pre_c.h
src/common/: CMakeLists.txt  globals.h  pre_c.h  utl.c  utl.h
src/common/icons/: about.xml  license.txt
src/options/: CMakeLists.txt  main.c  pre_c.h  update.c
